# generative-ai-with-fastapi

./: AGENTS.md  pyproject.toml  test_bedrock.py  test_bedrock_cohere_logprobs.py  test_logprobs.py  test_model_access.py
async_tutorial/: 01_sync_basics.py  02_event_loop_explained.py  03_async_fundamentals.py  04_threading_vs_async.py  BONUS_fastapi_async.py  GETTING_STARTED.md  QUICK_REFERENCE.py  README.md  START_HERE.txt  requirements.txt  run_all_lessons.py  test_tutorial.py
basics/audio/: client.py  main.py  models.py  utils.py
basics/concurrency/: async_openai.py  io_blocking.py
basics/text/: load_generate_tinyllama.py  serve_tiny_fastapi.py  single_file_fastapi_app.py  streamlit_client.py
basics/type_safety/: dataclass_utils.py  pydantic_utils.py  type_utils.py
rag/: client.py  main.py  upload.py
web_scraper/: client.py  dependencies.py  main.py  pyproject.toml  scraper.py
